--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,10 +28,10 @@ ENDFUNCTION(PREPEND_H)
 project(robot_app)
 
 if(UNIX)
-#	set(CMAKE_C_COMPILER "/usr/bin/gcc-4.8")
-#	set(CMAKE_CXX_COMPILER "/usr/bin/g++-4.8")
-	set(CMAKE_C_COMPILER "/usr/bin/clang")
-	set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
+	set(CMAKE_C_COMPILER "/usr/bin/gcc-4.8")
+	set(CMAKE_CXX_COMPILER "/usr/bin/g++-4.8")
+#	set(CMAKE_C_COMPILER "/usr/bin/clang")
+#	set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
 endif(UNIX)
 
 # set binary and library folders
@@ -100,7 +100,7 @@ include_directories(${ALL_INCL_DIR})
 link_directories(${ALL_LINK_DIR})
 
 ################################### build server ####################################
-set(SOURCE_FILES main.cpp Move_Gait.cpp)
+set(SOURCE_FILES main.cpp Move_Gait.cpp OpenDoor.cpp)
 PREPEND(FULL_SRC Server ${SOURCE_FILES})
 add_executable(Server ${FULL_SRC})
 target_link_libraries(Server ${ALL_LINK_LIB})
