txtGait & modelValidate added, GetStanceDsByFunc added and tested ok

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,11 +76,11 @@ set(XNNITE_LINK_LIB )
 set(OPENNI_INCL_DIR "/usr/include/ni")#open NI for kinect
 set(OPENNI_LINK_DIR "/usr/lib")
 set(OPENNI_LINK_LIB OpenNI)
-set(ARIS_INCL_DIR "/usr/aris2/include")
-set(ARIS_LINK_DIR "/usr/aris2/lib")
+set(ARIS_INCL_DIR "/usr/aris/include")
+set(ARIS_LINK_DIR "/usr/aris/lib")
 set(ARIS_LINK_LIB aris_server aris_sensor aris_dynamic aris_control aris_core)
-set(ROBOTS_INCL_DIR "/usr/Robots2/include")
-set(ROBOTS_LINK_DIR "/usr/Robots2/lib")
+set(ROBOTS_INCL_DIR "/usr/Robots/include")
+set(ROBOTS_LINK_DIR "/usr/Robots/lib")
 set(EIGEN_INCL_DIR "/usr/local/include/eigen3")
 set(ROBOTS_LINK_LIB Robot_Type_I Robot_Type_II Robot_Base)
 
