--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,15 +61,15 @@ endif(UNIX)
 if(UNIX)
 
 set(SYSTEM_LINK_LIB pthread)
-set(XENOMAI_INCL_DIR "/usr/xenomai/include")
-set(XENOMAI_LINK_DIR "/usr/xenomai/lib")
+set(XENOMAI_INCL_DIR "/usr/Aris_Dependent/xenomai/include")
+set(XENOMAI_LINK_DIR "/usr/Aris_Dependent/xenomai/lib")
 set(XENOMAI_LINK_LIB native rtdm xenomai)
 set(ETHERLAB_INCL_DIR "/opt/etherlab/include")
 set(ETHERLAB_LINK_DIR "/opt/etherlab/lib")
 set(ETHERLAB_LINK_LIB ethercat rt)
-set(XSENS_INCL_DIR "/usr/IMU/include")
+set(XSENS_INCL_DIR "/usr/Aris_Dependent/xsens/include")
 set(XSENS_LINK_LIB IMU xcommunication xstypes)
-set(XSENS_LINK_DIR "/usr/IMU/lib")
+set(XSENS_LINK_DIR "/usr/Aris_Dependent/xsens/lib")
 set(XNNITE_INCL_DIR "/usr/include/nite")#Driver for kinect
 set(XNNITE_LINK_DIR "/usr/lib")
 set(XNNITE_LINK_LIB )
@@ -110,7 +110,7 @@ include_directories(${ALL_INCL_DIR})
 link_directories(${ALL_LINK_DIR})
 
 ################################### build server ####################################
-set(SOURCE_FILES main.cpp Move_Gait.cpp GeneralFunc.cpp NormalGait.cpp OpenDoor.cpp NonRTOptimalBCS.cpp NonRTOptimalGCS.cpp RTOptimal.cpp Balance.cpp EmergencyStop.cpp)
+set(SOURCE_FILES main.cpp NonRTOptimalBCS.cpp NonRTOptimalGCS.cpp NonRTOptimalGCS360.cpp NonRTOptimalGCSRotate.cpp)
 PREPEND(FULL_SRC Server ${SOURCE_FILES})
 add_executable(Server ${FULL_SRC})
 target_link_libraries(Server ${ALL_LINK_LIB})
